# nocp

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  README.md  build.sh  nocp  pyproject.toml  test_cache_manual.py  test_chromadb_cache.py
.github/workflows/: test.yml
benchmarks/: __init__.py  async_vs_sync.py  report_generator.py  run_benchmarks.py  test_datasets.py
docs/: 00-PROJECT-OVERVIEW.md  01-ARCHITECTURE.md  02-API-CONTRACTS.md  03-DEVELOPMENT-ROADMAP.md  04-COMPONENT-SPECS.md  05-TESTING-STRATEGY.md  06-DEPLOYMENT.md  07-API-REFERENCE.md  07-COMPRESSION-STRATEGIES.md  08-USER-GUIDE.md  ARCHITECTURE.md  PHASE3_IMPLEMENTATION_SUMMARY.md
examples/: api_aggregation.py  basic_usage.py  demo_basic.py  demo_result_pattern.py  multiturn_chat.py  rag_example.py
src/nocp/: __init__.py  __main__.py  bootstrap.py  cli.py  exceptions.py
src/nocp/core/: __init__.py  act.py  agent.py  articulate.py  assess.py  async_modules.py  cache.py  config.py  persistence.py
src/nocp/llm/: __init__.py  client.py  router.py
src/nocp/models/: __init__.py  context.py  contracts.py  enums.py  result.py  schemas.py
src/nocp/modules/: __init__.py  context_manager.py  output_serializer.py  router.py  tool_executor.py
src/nocp/observability/: __init__.py  logging.py
src/nocp/serializers/: __init__.py  toon.py
src/nocp/tools/: __init__.py  example_tools.py
src/nocp/utils/: __init__.py  config_export.py  error_handler.py  logging.py  rich_logging.py  token_counter.py
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/core/: test_act.py  test_async_modules.py  test_cache.py  test_config.py  test_conversation_history.py  test_llm_client.py
tests/e2e/: README.md  __init__.py  test_complete_workflow.py  test_gemini_integration.py  test_multi_turn.py
tests/integration/: README.md  __init__.py  test_agent_flow.py  test_compression_pipeline.py  test_llm_integration.py  test_serialization_pipeline.py
tests/performance/: README.md  __init__.py  test_compression_speed.py  test_memory_usage.py  test_throughput.py
tests/unit/: README.md  __init__.py  test_assess.py  test_async_modules.py  test_cache.py  test_config.py  test_context_manager.py  test_conversation_history.py  test_error_handler.py  test_exceptions.py  test_llm_client.py  test_output_serializer.py  test_result.py  test_router.py  test_token_counter.py  test_tool_executor.py
tests/utils/: test_config_export.py
